--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1755,107 +1755,107 @@ stories:
   domain: http://www.thepublicopinion.com/
   link: https://www.thepublicopinion.com/ap/politics/trump-warns-of-carnage-in-rebel-stronghold-in-syria/article_d86419bb-ef58-5586-9866-68b11f866bd4.html
 images:
-- name: abandonedbuildings_light_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_light_dali.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-light-dali.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-light-dali.png
-- name: flower-barbed-wire-flower-barbed-wire-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-alien-goggles.jpg
-- name: miamibeach-miamibeach-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dali-two.jpg
-- name: copper-circuit-city-vancouver-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-vancouver-clouds.jpg
-- name: border-fence-border-fence-on-hill-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-far-away.jpg
-- name: crow-crow-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-blocks.jpg
-- name: subway-subway-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-atari-asteroids.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-yellow-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-yellow-paper.JPG
-- name: old-granary-field-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-atari-missle.jpg
-- name: copper-circuit-waterfall-southern-oregon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-waterfall-southern-oregon.jpg
-- name: server-cloud-server-racks-door-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-crafty-painting.jpg
-- name: aws-s3-stories-losangeles-from-observatory-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-losangeles-from-observatory-free-woman.jpg
-- name: razorwire-DSC-0080-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dry-skin.jpg
-- name: window-window-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-yellow-collage.jpg
-- name: statue-of-liberty-front-view-statueofliberty-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-mucha-mult.jpg
-- name: server-cloud1-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-blue-circuit-5.jpg
-- name: rain-princess-capital_36728420065_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-capital_36728420065_o.jpg
-- name: birdhouse-birdhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-atari-missle.jpg
-- name: nazi-invasion-old-building-and-cars_36680898846_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-and-cars_36680898846_o.jpg
-- name: nyc-flag-nycflag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-granite.jpg
-- name: docks-docks-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-alberto-giacometti.jpg
-- name: statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
-- name: rain-princess-close-to-all-remote-aircraft.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-close-to-all-remote-aircraft.jpg
-- name: white-house-whitehouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-far-away.jpg
-- name: wind-mills-windmills-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-aqua.jpg
-- name: la-muse-crypto-wheels-old-compute-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-crypto-wheels-old-compute-bletchley.jpg
-- name: nazi-invasion-nyc-streets-laundromat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-nyc-streets-laundromat.jpg
-- name: powerlines-power-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dark-rain.jpg
-- name: statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-marcel-duchamp.jpg
-- name: copper-circuit-working-waterfront-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-working-waterfront-2.jpg
-- name: fence-fence-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-electricity.jpg
-- name: nyc-flag-nycflag-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-post-modern.jpg
-- name: scream-IMG_4833.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_4833.jpg
-- name: aws-s3-royalroads-royalroads-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still-1200.jpg
-- name: old-granary-field-oldhouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-rainbow-festival.jpg
-- name: fence-fence-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-umberto-bocc.jpg
-- name: downtheline-downtheline-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-emily-carr.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dark-rain.jpg
-- name: dc-statue-dcstatue-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-atari-asteroids.jpg
-- name: birdhouse-birdhouse-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-diego-rivera1.jpg
-- name: gears-4882162452-fa3126b38d-b-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dali-three.jpg
-- name: server-cloud-server-racks-door-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-alberto-giacometti.jpg
-- name: containership-bw-storytelling-colored-circuits.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-colored-circuits.png
-- name: hollywood-building-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-clean-view.jpg
-- name: oldcabin-store-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-crafty-painting.jpg
-- name: razorcliff-razorcliff-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-rain.jpg
-- name: old-church-oldchurch-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-wols.jpg
-- name: stalin-time-eiphel-tower-paris-brown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-eiphel-tower-paris-brown.jpg
-- name: bf-skinner-train-france-high-speed-in-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-france-high-speed-in-station.jpg
+- name: bluelake-far-away-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-far-away-file-00-01-17-38.jpg
+- name: nazi-invasion-sailboat-in-front-of-housing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-sailboat-in-front-of-housing.jpg
+- name: walled-garden-walled-garden-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-pablo-blue.jpg
+- name: bluelake-purp-paper-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purp-paper-file-00-00-38-67.jpg
+- name: old-door-lock-old-door-lock-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-sand-paper.jpg
+- name: blossombar-crafty-painting-file-00-00-50-42.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-42.jpg
+- name: curtain-curtain-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dry-skin.jpg
+- name: copper-circuit-san-pedro-light-cities.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-san-pedro-light-cities.jpg
+- name: la-muse-hiding-monster-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hiding-monster-statue.jpg
+- name: adam-smith-adam-smith-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-atari-missle.jpg
+- name: abandonedbuildings_umberto_bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_umberto_bocc.jpg
+- name: status-berlin-status-berlin-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-marcel-duchamp.jpg
+- name: mediterranean-mediterranean-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-mucha-mult.jpg
+- name: abandonedbuildings_deep_connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_deep_connections.jpg
+- name: locked-up-steam-lock-up-steam-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-rain.jpg
+- name: adam-smith-adam-smith-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-green-zuma.jpg
+- name: adam-smith-adam-smith-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-colorful-dream.jpg
+- name: catacombs-catacombs-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dali-two.jpg
+- name: stalin-time-downtown-sidewalk-washington.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-sidewalk-washington.jpg
+- name: oldhousecars-house-old-cars-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-colored-circuits.jpg
+- name: braceros-domingo-ulloa-grafitti-woman-bangs.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-grafitti-woman-bangs.jpg
+- name: server-cloud-server-racks-door-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-colorful-blocks.jpg
+- name: copper-circuit-electric-tower-sun-behind.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-electric-tower-sun-behind.jpg
+- name: rockingchair-rockingchair-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-satan-red.jpg
+- name: nazi-invasion-building-shadows-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-building-shadows-sun.jpg
+- name: store-on-corner-store-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crafty-painting.jpg
+- name: ellis-island-ellisisland-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-space-pizza.jpg
+- name: old-barn-old-barn-1500-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-mucha-mult.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-5.jpg
+- name: oldhouse-oldhouse-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-free-woman.jpg
+- name: containership-containership-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-pablo-blue.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-purp-paper.jpg
+- name: lincoln-memorial-lincolnmemorial-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-rainbow-festival.jpg
+- name: mosaic-face-mosaic-face-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-marcel-duchamp.jpg
+- name: oldhouse-oldhouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-clean-view.jpg
+- name: braceros-domingo-ulloa-close-to-all-remote-aircraft.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-close-to-all-remote-aircraft.jpg
+- name: old-gas-pumps-oldgaspumps-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-electricity.jpg
+- name: bf-skinner-old-piano-paris-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-piano-paris-hospital.jpg
+- name: crow-crow-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-nazi-poster.jpg
+- name: wind-mills-windmills-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-internet-numbers.jpg
+- name: white-house-whitehouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-clean-view.jpg
+- name: white-house-lawn-white-house-window-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smoking-cigarette.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-electricity.jpg
+- name: legal-statue-legalstatue-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-plentiful.jpg
+- name: nyc-flag-nycflag-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-dali.jpg
+- name: dragon_close-up-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-nazi-invasion.jpg
+- name: stalin-time-british-guards-marching.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-british-guards-marching.jpg
+- name: eduardo-eduardo-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-really-hot.jpg
+- name: flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
+- name: udnie-IMG_6328.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6328.jpg
+- name: oldcabin-store-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-marcel-duchamp.jpg
 ---
 Outside Linebackers Tyler Johnson, Christian Bell Become Factors In Limited Appearances.&nbsp;Powerful Storm Pounds Southern California With Rain, Snow.&nbsp;The Ongoing Saga Of A Girl And Her Scale.&nbsp;Lincoln Park Exchange Club Continues Tradition Of Christmas Giving.&nbsp;The Staff Of The Half Moon Bay Review.&nbsp;Expert Offers Advice For Beating The 'holiday Blues'.&nbsp;Israeli Lawmaker Aims To Oust Netanyahu In Likud Primary.&nbsp;Trains Of Christmas A Great Family Activity.&nbsp;
